--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://{mmlawton15}.github.io/{ReactPortfolio}",
   "name": "mm-portfolio",
   "version": "0.1.0",
   "private": true,
@@ -10,6 +11,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -35,6 +38,7 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4"
+    "@testing-library/react": "^12.1.4",
+    "gh-pages": "^3.2.3"
   }
 }
