removing curly braces around the homepage link, hoping this deploys it correctly

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://{mmlawton15}.github.io/{ReactPortfolio}",
+  "homepage": "http://mmlawton15.github.io/ReactPortfolio",
   "name": "mm-portfolio",
   "version": "0.1.0",
   "private": true,
